examples/negative/type_errors/L2/8_bool_low_limit_case.ob
MODULE BoolLowLimCase;

VAR x,y: INTEGER;

BEGIN
  x := 0;
  CASE x OF
    TRUE..19: y := 0
  | 20: y := 1
  END
END BoolLowLimCase.
